UIMA-1855 Modified logCasForEndpoint() to change new Long(long) to Long.valueOf(long)
git-svn-id: https://svn.apache.org/repos/asf/uima/uima-as/trunk@983695 13f79535-47bb-0310-9956-ffa450edef68